[tool.poetry]
name = "pyYAHTS"
version = "1.0.33"
description = "An implementation of Cisco pyATS"
authors = ["John Capobianco <ptcapo@gmail.com>"]
packages = [{ include = "pyYAHTS", from = "src"}]
readme = "README.md"
repository = "https://github.com/automateyournetwork/pyYAHTS"

[tool.poetry.scripts]
pyYAHTS = 'pyYAHTS.script:run'

[tool.poetry.dependencies]
python = "^3.8"
rich-click = "^1.2.1"
pyats = {version = "22.1", extras = ["full"]}
json2table = "^1.1.5"
fpdf = "^1.7.2"
pandas = "^1.4.1"
tabulate = "^0.8.9"
rich = "^12.1.0"
networkx = "^2.7.1"
pyvis = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
